remove RemoteWebDriver